Align the menu icon correctly
Align the menu icon correctly

--- a/css/style.css
+++ b/css/style.css
@@ -445,7 +445,7 @@ span {
 #mobile-nav-toggle {
   position: fixed;
   right: 0;
-  top: 0;
+  top: 1px;
   z-index: 999;
   margin: 4px 20px 0 0;
   border: 0;
